# urban-platform

./: .editorconfig  .env.example  .gitignore  .impeccable.md  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  data.json  docker-compose.dev.yml  docker-compose.yml  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  test-results-unit.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  deploy-staging.yml  test.yml
about/: blocks.py
about/factories/: __init__.py  about_page_factory.py
about/migrations/: 0001_initial.py  0002_create_about_index.py  0003_create_about_pages.py
about/models/: __init__.py  about_commission.py  about_dev_team.py  about_index.py  about_website.py
about/tests/: test_blocks.py
core/: apps.py  auth_backends.py  blocks.py  cache.py  context_processors.py  permissions.py  signals.py  sitemaps.py  toc.py  utils.py  wagtail_forms.py  wagtail_hooks.py  wagtail_viewsets.py  widgets.py
core/emails/: services.py  tasks.py  tokens.py
core/migrations/: 0001_initial.py  0002_create_marseille_city.py  0002_populate_marseille_data.py  0003_alter_city_models.py  0003_alter_citydistrict_options_and_more.py  0004_alter_user_options_alter_user_created_at_and_more.py  0005_add_email_event.py  0006_add_user_uuid_nullable.py  0007_populate_user_uuids.py  0008_make_user_uuid_non_nullable.py  0009_add_soft_delete_to_user.py  0010_remove_user_is_staff.py
core/models/: __init__.py  city.py  city_district.py  city_neighborhood.py  email_event.py  neighborhood_association.py  user.py
core/templatetags/: custom_blocks.py  django_settings.py  forms.py  navigation_tags.py  structured_data.py
core/tests/: test_auth_mixins.py  test_blocks.py  test_content_cache.py  test_content_transfer.py  test_get_client_ip.py  test_migrations.py  test_navigation_tags.py  test_server_starts.py  test_structured_data.py  test_temporary_test.py  test_toc.py  test_user_role_admin.py  test_user_role_signal.py
core/views/: __init__.py  account_delete.py  auth_mixins.py  docs.py  email_verify.py  login.py  logout.py  me.py  password_reset.py  profile_edit.py  register.py
docs/: mkdocs.yml
docs/docs/: a-propos.md  connexion.md  documents.md  fiches-pedagogiques.md  images.md  index.md  legal.md  page-accueil.md  statistiques-votes.md  tableau-de-bord.md  utilisateurs.md
e2e/: conftest.py  pytest.ini  utils.py
e2e/tests/: test_auth_flows.py
home/: models.py  tests.py
home/migrations/: 0002_create_homepage.py  0003_alter_homepage_options.py  0004_homepage_content.py  0005_alter_homepage_options.py  0006_alter_homepage_content.py  0007_alter_homepage_content.py  0008_alter_homepage_content.py  0009_alter_homepage_content.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0c0b7c30ea084132_idea_py.html  z_0c0b7c30ea084132_idea_stats_py.html  z_0c0b7c30ea084132_vote_py.html  z_0c0b7c30ea084132_vote_stats_py.html  z_13b646bb8ec932c1___init___py.html  z_13b646bb8ec932c1_code_of_conduct_consent_py.html  z_13b646bb8ec932c1_code_of_conduct_py.html  z_13b646bb8ec932c1_cookies_policy_py.html  z_13b646bb8ec932c1_legal_index_py.html  z_13b646bb8ec932c1_privacy_policy_py.html  z_13b646bb8ec932c1_terms_of_service_py.html  z_1bb4dba99010a4c0_apps_py.html  z_259c02725a53046d_apps_py.html  z_259c02725a53046d_services_py.html  z_259c02725a53046d_wagtail_hooks_py.html  z_27dc8164e7f962f5_populate_legal_pages_py.html  z_48ec19b2b623494d___init___py.html  z_48ec19b2b623494d_event_py.html  z_48ec19b2b623494d_external_link_py.html  z_48ec19b2b623494d_form_py.html  z_48ec19b2b623494d_idea_py.html  z_48ec19b2b623494d_project_py.html  z_48ec19b2b623494d_publication_index_py.html  z_48ec19b2b623494d_publication_py.html  z_519b58c5776e3bc9_apps_py.html  z_519b58c5776e3bc9_blocks_py.html  z_544371ef749f6f26_mock_home_page_content_py.html  z_57760688d1f824db_apps_py.html  z_57760688d1f824db_auth_backends_py.html  z_57760688d1f824db_blocks_py.html  z_57760688d1f824db_cache_py.html  z_57760688d1f824db_context_processors_py.html  z_57760688d1f824db_permissions_py.html  z_57760688d1f824db_signals_py.html  z_57760688d1f824db_sitemaps_py.html  z_57760688d1f824db_toc_py.html  (+53 more)
legal/: forms.py  utils.py  views.py
legal/migrations/: 0001_initial.py  0002_create_legal_index.py  0003_codeofconductpage.py  0004_create_code_of_conduct.py  0005_cookiespolicypage_privacypolicypage_and_more.py  0006_create_legal_pages_content.py  0007_alter_codeofconductpage_content_and_more.py  0008_codeofconductconsent.py
legal/models/: __init__.py  code_of_conduct.py  code_of_conduct_consent.py  cookies_policy.py  legal_index.py  privacy_policy.py  terms_of_service.py
nginx/: Dockerfile  nginx.conf  nginx.conf.template
pedagogy/: apps.py  factories.py
pedagogy/factories/: document_factory.py  image_factory.py  pedagogy_card_factory.py
pedagogy/migrations/: 0001_initial.py  0002_create_pedagogy_index.py  0003_alter_pedagogyindexpage_options.py  0004_alter_pedagogyindexpage_body_and_more.py  0005_pedagogycardpage_description_and_more.py  0006_alter_pedagogycardpage_description.py  0007_remove_pedagogycardpage_body_and_more.py  0008_pedagogyresource.py  0009_alter_pedagogycardpage_content.py  0010_alter_pedagogycardpage_content.py  0011_alter_pedagogycardpage_content.py  0012_add_show_toc.py  0012_alter_pedagogycardpage_content.py  0013_alter_pedagogycardpage_content.py  0014_alter_pedagogycardpage_content.py
publications/: services.py  wagtail_hooks.py
scripts/: dev.py  e2e.py
search/: views.py
urban_platform/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+220 files in other folders)
