[project]
name = "urban-platform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.1",
    "gunicorn>=23.0.0",
    "pre-commit>=4.5.1",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
    "wagtail>=7.2.1",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main"
]
strict_optional = "True"
disable_error_code = [
    "import-untyped"
]

[tool.django-stubs]
django_settings_module = "urban_platform.settings.dev"

[dependency-groups]
dev = [
    "django-browser-reload==1.21.0",
    "factory-boy==3.3.3",
    "playwright==1.57.0",
    "pytest-django==4.11.1",
    "pytest-env==1.2.0",
    "pytest-playwright==0.7.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "urban_platform.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
ignore = [
    "F401" # use explicit re-export
]

[tool.ruff.lint.per-file-ignores]
"urban_platform/settings/*" = ["F403", "F405"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
