[project]
name = "urban-platform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.0",
    "django>=5.2,<6.1",
    "gunicorn>=23.0.0",
    "pre-commit>=4.5.1",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-slugify>=8.0.4",
    "redis>=5.0.3,<6.5",
    "sentry-sdk>=2.52.0",
    "tqdm>=4.67.1",
    "wagtail>=7.2.1",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main"
]
strict_optional = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["wagtail.*", "modelcluster.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "urban_platform.settings.dev"

[dependency-groups]
dev = [
    "celery-stubs>=0.1.3",
    "django-browser-reload>=1.21.0",
    "django-stubs[compatible-mypy]>=5.2.8",
    "factory-boy>=3.3.3",
    "mypy>=1.19.1",
    "playwright>=1.57.0",
    "pytest-django>=4.11.1",
    "pytest-env>=1.2.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.9.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "urban_platform.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.djlint]
profile = "django"
blank_line_after_tag = "load,extends"
close_void_tags = true
line_break_after_multiline_tag = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "F401" # use explicit re-export
]

[tool.ruff.lint.per-file-ignores]
"urban_platform/settings/*" = ["F403", "F405"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
